# Sales-Management-Mini

./: .env.docker.example  .gitignore  POS_UX_UI_BLUEPRINT.md  ROLE_UI_AUDIT_REPORT.md  ROLE_UI_MATRIX.md  docker-compose-local.yml  docker-compose.yml  docker-composeprod.yml  model_scan.txt  readme.md  repo_scan.txt
AI-Agent/: .actrc  .gitignore  .last_demo_project_name.txt  AGENTS.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
AI-Agent/.github/: dependabot.yml
AI-Agent/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
AI-Agent/.github/workflows/: ci.yml  docs.yml  release.yml
AI-Agent/AI_agent_run/: .env.prod.example  .gitignore  AGENTS.md  Makefile  README.md  RUN_MANUAL.md  docker-compose.frontend.yml
AI-Agent/AI_agent_run/backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  pyproject.toml
AI-Agent/AI_agent_run/backend/alembic/: env.py
AI-Agent/AI_agent_run/backend/alembic/versions/: 2026-04-25_initial.py  2026-04-26_add_rag_documents.py
AI-Agent/AI_agent_run/backend/app/: main.py
AI-Agent/AI_agent_run/backend/app/agents/: __init__.py  assistant.py  prompts.py
AI-Agent/AI_agent_run/backend/app/api/: deps.py  exception_handlers.py  versioning.py
AI-Agent/AI_agent_run/backend/app/commands/: __init__.py  cleanup.py  seed.py
AI-Agent/AI_agent_run/backend/app/core/: config.py  csrf.py  logging.py  sanitize.py  security.py
AI-Agent/AI_agent_run/backend/app/db/: base.py  session.py
AI-Agent/AI_agent_run/backend/app/repositories/: __init__.py  channel_bot.py  channel_identity.py  channel_session.py  chat_file.py  conversation.py  conversation_share.py  message_rating.py  project.py  rag_document.py  sync_log.py  sync_source.py  user.py
AI-Agent/AI_agent_run/backend/app/schemas/: __init__.py  base.py  channel_bot.py  conversation.py  conversation_share.py  file.py  message_rating.py  project.py  token.py  user.py
AI-Agent/AI_agent_run/backend/app/services/: __init__.py  channel_bot.py  conversation.py  conversation_share.py  file_storage.py  file_upload.py  message_rating.py  project.py  rag_document.py  rag_sync.py  sales_training_store.py  sync_source.py  training_document.py  user.py
AI-Agent/AI_agent_run/backend/app/static/: index.html
AI-Agent/AI_agent_run/backend/cli/: commands.py
AI-Agent/AI_agent_run/backend/tests/: conftest.py  test_admin.py  test_agents.py  test_commands.py  test_core.py  test_migrations.py  test_repositories.py  test_security.py  test_services.py  test_ssrf.py
AI-Agent/AI_agent_run/backend/tests/api/: test_auth.py  test_exceptions.py  test_health.py  test_metrics.py  test_openapi.py  test_users.py
AI-Agent/docs/: ai-agent.md  architecture.md  deployment.md  development.md  frontend.md  getting-help.md  index.md  installation.md  observability.md  rag.md
AI-Agent/docs/concepts/: index.md
AI-Agent/docs/guides/: configuration.md  index.md  quick-start.md
AI-Agent/docs/includes/: abbreviations.md
AI-Agent/docs/overrides/: main.html
AI-Agent/docs/stylesheets/: extra.css
AI-Agent/fastapi_gen/: __init__.py  cli.py  config.py  generator.py  prompts.py
AI-Agent/template/: VARIABLES.md  cookiecutter.json
AI-Agent/template/hooks/: post_gen_project.py
AI-Agent/template/{{cookiecutter.project_slug}}/: .env.prod.example  .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.frontend.yml  docker-compose.prod.yml  docker-compose.yml
AI-Agent/template/{{cookiecutter.project_slug}}/.claude/: settings.json
AI-Agent/template/{{cookiecutter.project_slug}}/.claude/commands/: add-endpoint.md  fix-issue.md  review.md
AI-Agent/template/{{cookiecutter.project_slug}}/.claude/rules/: api-conventions.md  architecture.md  code-style.md  exceptions-security.md  frontend.md  schemas-models.md  testing.md
AI-Agent/template/{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
AI-Agent/template/{{cookiecutter.project_slug}}/backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  alembic.ini  pyproject.toml
AI-Agent/template/{{cookiecutter.project_slug}}/backend/alembic/: env.py  script.py.mako
AI-Agent/template/{{cookiecutter.project_slug}}/backend/app/: __init__.py  admin.py  main.py
AI-Agent/template/{{cookiecutter.project_slug}}/backend/cli/: commands.py
AI-Agent/template/{{cookiecutter.project_slug}}/backend/tests/: conftest.py  test_admin.py  test_agents.py  test_clients.py  test_commands.py  test_core.py  test_migrations.py  test_repositories.py  test_security.py  test_services.py  test_services_conversation.py  test_ssrf.py  test_worker.py
AI-Agent/template/{{cookiecutter.project_slug}}/docs/: adding_features.md  architecture.md  commands.md  configuration.md  file-processing.md  patterns.md  permissions.md
AI-Agent/template/{{cookiecutter.project_slug}}/docs/howto/: add-agent-tool.md  add-api-endpoint.md  add-background-task.md  add-rag-source.md  add-sync-connector.md  configure-sync-sources.md  customize-agent-prompt.md  use-ratings.md
AI-Agent/template/{{cookiecutter.project_slug}}/frontend/: .env.example  Dockerfile  README.md  instrumentation.ts  next.config.ts  package.json  playwright.config.ts  vitest.config.ts  vitest.setup.ts
AI-Agent/template/{{cookiecutter.project_slug}}/frontend/e2e/: auth.setup.ts  auth.spec.ts  chat.spec.ts  home.spec.ts
AI-Agent/template/{{cookiecutter.project_slug}}/frontend/messages/: en.json  pl.json
AI-Agent/template/{{cookiecutter.project_slug}}/frontend/src/: i18n.ts  middleware.ts
AI-Agent/template/{{cookiecutter.project_slug}}/kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml
AI-Agent/template/{{cookiecutter.project_slug}}/nginx/: nginx.conf
AI-Agent/template/{{cookiecutter.project_slug}}/nginx/ssl/: .gitkeep
AI-Agent/tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_generator.py  test_integration.py  test_message_ratings.py  test_prompts.py  test_rag_config.py  test_rag_integration.py  test_template_integration.py
(+757 files in other folders)
